<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_baseline_send_24"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_rating"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/title_people" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/title_notifications" />

</menu>
